2006-12-05  Per Bothner  <per@bothner.com>

	* kawa/repl.java: Update copyright year printed by --version to 2007.

	* Makefile.am (kawa/Version.java): Use svnversion command.

	* Makefile.am (selected-java-source): Handle JAVA_SOURCE = 6.

2006-12-04  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java: Update for require.importDefinitions.
	* kawa/Shell.java (run): Update for Language.run changes.
	* kawa/standard/require.java (importDefinitions): Some refactoring so
	we can pass the ModuleInfo from XQParser so we use the same info
	without trying to load the wrong file.  Combine two methods to one.
	(lookupModuleFromSourcePath): New static helper method.

	* kawa/repl.java (compilationDirectory): Removed static field, replaced
	by non-static field in ModuleManager.
	(processArgs): Use ModuleManager's new setCompilationDirectory method.

	* kawa/standard/load.java (pply): Don't temporarily setBaseUri.

	* Makefile.am (patch-source-list): Change pattern so we catch
	files that only use #ifndef and not #ifdef,

	* configure.in (WITH_XQTS): Previous change not quite right.

2006-12-02  Per Bothner  <per@bothner.com>

	* configure.in (WITH_XQTS): Default to false.

2006-12-01  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.8.91.
	* build.xml (version.release): Likewise.

	* configure.in: Add support for JAVA_SOURCE=6.
	* Makefile.am (select-java6): New rule, which sets JAVA6 and
	use:java.text.Normalizer.

2006-11-27  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (lookup): New hasNamespace.
	* kawa/standard/require.java (importDefinitions): Inline getDefine.
	Do check for duplicate declaration using getNamespaceOf.
	Use ScopeExp.duplicateDeclarationError.

2006-11-22  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxRules.java: Rename Consumer methods append->write.
	* kawa/lang/Promise.java: Likewise.
	* kawa/lang/Lambda.java: Likewise.
	* kawa/lang/SyntaxPattern.java: Likewise.